tests/ui/closures/issue-10398.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/issue-10398.rs:5:14
   |
LL |         let _a = x;
   |                  - value moved here
LL |         drop(x);
   |              ^ value used here after move
   |
   = note: move occurs because `x` has type `Box<i32>`, which does not implement the `Copy` trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
